# PlateWise

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: Dockerfile  pyproject.toml
api/scripts/: export_openapi.py
api/src/platewise_api/: __init__.py  main.py
api/src/platewise_api/api/: health.py
api/src/platewise_api/core/: config.py  errors.py
api/src/platewise_api/dev/: __init__.py  seed.py  seed_data.py
api/src/platewise_api/imports/: __init__.py  classifiers.py  contracts.py  enums.py  provenance.py  service.py
api/src/platewise_api/recommendations/: __init__.py  contracts.py  exceptions.py  explanations.py  filters.py  plates.py  scoring.py  service.py
api/src/platewise_api/schemas/: __init__.py  errors.py
api/tests/: import_fixtures.py  recommendation_fixtures.py  test_cors.py  test_dev_seed.py  test_errors.py  test_health.py  test_import_calculation.py  test_import_classification.py  test_import_hardening.py  test_import_service.py  test_import_units.py  test_openapi_export.py  test_recommendation_contracts.py  test_recommendation_explanations.py  test_recommendation_filters.py  test_recommendation_ranking.py  test_recommendation_scoring.py  test_recommendation_service.py
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260716_0001_create_campuses.py  20260718_0001_initial_platewise_schema.py  20260718_0002_data_import_foundation.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: health.py
apps/api/app/core/: config.py
apps/api/app/db/: enums.py  mixins.py  session.py
apps/api/tests/: conftest.py  factories.py  import_fixtures.py  recommendation_fixtures.py  test_db_constraints.py  test_db_relationships.py  test_db_schema.py  test_health.py  test_import_calculation.py  test_import_classification.py  test_import_hardening.py  test_import_service.py  test_import_units.py  test_recommendation_contracts.py  test_recommendation_explanations.py  test_recommendation_filters.py  test_recommendation_ranking.py  test_recommendation_scoring.py  test_recommendation_service.py
db/: pyproject.toml
db/alembic/: env.py
db/src/platewise_db/: base.py  constants.py  decimal_utils.py  enums.py  pytest_plugin.py  session.py
db/tests/: conftest.py  factories.py  test_db_constraints.py  test_db_relationships.py  test_db_schema.py
(+205 files in other folders)
