[project]
name = "platewise-db"
version = "0.1.0"
description = "PlateWise database and persistence package"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16.4,<2",
  "psycopg[binary]>=3.2.9,<4",
  "sqlalchemy>=2.0.43,<3",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1,<9",
  "pytest-cov>=6.2.1,<7",
  "ruff>=0.12.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platewise_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]
