[project]
name = "unidine-api"
version = "0.1.0"
description = "UniDine API"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16.4,<2",
  "fastapi>=0.116.1,<1",
  "psycopg[binary]>=3.2.9,<4",
  "pydantic-settings>=2.10.1,<3",
  "sqlalchemy>=2.0.43,<3",
  "uvicorn[standard]>=0.35.0,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1",
  "pytest>=8.4.1,<9",
  "pytest-cov>=6.2.1,<7",
  "ruff>=0.12.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

